Fix: Fixed page overflow on small phone screens.

--- a/src/pages/project/project.scss
+++ b/src/pages/project/project.scss
@@ -191,14 +191,10 @@
   
   
   //Medium-to-Small Screens
-  @media (max-width: 900px) {
+//   @media (max-width: 900px) {
   
-    body {
-      .container {
-        width: 700px;
-      }
-    }
-  }
+    
+//   }
   
   
   //Medium-to-Small Screens
